Fix formatting errors

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -788,32 +788,33 @@ a deviation from conformance to stylistic standards.
 </p></dd>
 <dd class="dd" data-line="26;document\Definitions.mdk:26" style="margin-left:1.5em">
 <p data-line="26;document\Definitions.mdk:26"><span data-line="26;document\Definitions.mdk:26"></span>Example: Lint
-</p></dd></dl>
-<p data-line="26;document\Definitions.mdk:28"><span data-line="26;document\Definitions.mdk:28"></span> 
- conversion tool
-</p>
-<p class="indent para-continue" data-line="26;document\Definitions.mdk:29"><span data-line="26;document\Definitions.mdk:29"></span>  <span data-line="26;document\Definitions.mdk:29"></span>~<span data-line="26;document\Definitions.mdk:29"></span> program that converts the output of another program into a different format
-</p>
-<dl class="dl compact" data-line="26;document\Definitions.mdk:31">
-<dt class="dt dl-li compact-li" style="font-weight:bold">analysis target</dt>
-<dd class="dd" data-line="26;document\Definitions.mdk:31" style="margin-left:1.5em"><span data-line="26;document\Definitions.mdk:31"></span>programming artifact which a static analysis tool is instructed to analyze</dd></dl>
-<p data-line="26;document\Definitions.mdk:34"><span data-line="26;document\Definitions.mdk:34"></span><br>
-<span data-line="26;document\Definitions.mdk:35"></span> result file
-</p>
-<p class="indent" data-line="26;document\Definitions.mdk:35"><span data-line="26;document\Definitions.mdk:35"></span>  <span data-line="26;document\Definitions.mdk:35"></span>~<span data-line="26;document\Definitions.mdk:35"></span> file in which a static analysis tool detects a problem
- 
-rule
-</p>
-<p class="indent" data-line="26;document\Definitions.mdk:38"><span data-line="26;document\Definitions.mdk:38"></span>  <span data-line="26;document\Definitions.mdk:38"></span>~<span data-line="26;document\Definitions.mdk:38"></span> specific criterion for correctness verified by a static analysis tool
-</p>
-<p class="indent" data-line="26;document\Definitions.mdk:39"><span data-line="26;document\Definitions.mdk:39"></span>  <span data-line="26;document\Definitions.mdk:39"></span>~<span data-line="26;document\Definitions.mdk:39"></span> NOTE 1: Many static analysis tools associate a <span data-line="26;document\Definitions.mdk:39"></span>&#8220;rule id&#8221;<span data-line="26;document\Definitions.mdk:39"></span> with each result they report, but some do not.
-</p>
-<p class="indent" data-line="26;document\Definitions.mdk:40"><span data-line="26;document\Definitions.mdk:40"></span>  <span data-line="26;document\Definitions.mdk:40"></span>~<span data-line="26;document\Definitions.mdk:40"></span> NOTE 2: Some rules verify generally accepted criteria for correctness;
-    others verify conventions in use in a particular team or organization.
-</p>
-<p class="indent para-continue" data-line="26;document\Definitions.mdk:42"><span data-line="26;document\Definitions.mdk:42"></span>  <span data-line="26;document\Definitions.mdk:42"></span>~<span data-line="26;document\Definitions.mdk:42"></span> Example: <span data-line="26;document\Definitions.mdk:42"></span>&#8220;Variables must be initialized before use&#8221;<span data-line="26;document\Definitions.mdk:42"></span>, <span data-line="26;document\Definitions.mdk:42"></span>&#8220;Class names must begin with an uppercase letter&#8221;<span data-line="26;document\Definitions.mdk:42"></span>.
-</p>
-<dl class="dl loose" data-line="26;document\Definitions.mdk:44">
+</p></dd>
+<dt class="dt dl-li loose-li" style="font-weight:bold">conversion tool</dt>
+<dd class="dd" data-line="26;document\Definitions.mdk:28" style="margin-left:1.5em">
+<p data-line="26;document\Definitions.mdk:28"><span data-line="26;document\Definitions.mdk:28"></span>program that converts the output of another program into a different format
+</p></dd>
+<dt class="dt dl-li loose-li" style="font-weight:bold">analysis target</dt>
+<dd class="dd" data-line="26;document\Definitions.mdk:31" style="margin-left:1.5em">
+<p data-line="26;document\Definitions.mdk:31"><span data-line="26;document\Definitions.mdk:31"></span>programming artifact which a static analysis tool is instructed to analyze
+</p></dd>
+<dt class="dt dl-li loose-li" style="font-weight:bold">result file</dt>
+<dd class="dd" data-line="26;document\Definitions.mdk:34" style="margin-left:1.5em">
+<p data-line="26;document\Definitions.mdk:34"><span data-line="26;document\Definitions.mdk:34"></span>file in which a static analysis tool detects a problem
+</p></dd>
+<dt class="dt dl-li loose-li" style="font-weight:bold">rule</dt>
+<dd class="dd" data-line="26;document\Definitions.mdk:37" style="margin-left:1.5em">
+<p data-line="26;document\Definitions.mdk:37"><span data-line="26;document\Definitions.mdk:37"></span>specific criterion for correctness verified by a static analysis tool
+</p></dd>
+<dd class="dd" data-line="26;document\Definitions.mdk:39" style="margin-left:1.5em">
+<p data-line="26;document\Definitions.mdk:39"><span data-line="26;document\Definitions.mdk:39"></span>NOTE 1: Many static analysis tools associate a <span data-line="26;document\Definitions.mdk:39"></span>&#8220;rule id&#8221;<span data-line="26;document\Definitions.mdk:39"></span> with each result they report, but some do not.
+</p></dd>
+<dd class="dd" data-line="26;document\Definitions.mdk:40" style="margin-left:1.5em">
+<p data-line="26;document\Definitions.mdk:40"><span data-line="26;document\Definitions.mdk:40"></span>NOTE 2: Some rules verify generally accepted criteria for correctness;
+others verify conventions in use in a particular team or organization.
+</p></dd>
+<dd class="dd" data-line="26;document\Definitions.mdk:42" style="margin-left:1.5em">
+<p data-line="26;document\Definitions.mdk:42"><span data-line="26;document\Definitions.mdk:42"></span>Example: <span data-line="26;document\Definitions.mdk:42"></span>&#8220;Variables must be initialized before use&#8221;<span data-line="26;document\Definitions.mdk:42"></span>, <span data-line="26;document\Definitions.mdk:42"></span>&#8220;Class names must begin with an uppercase letter&#8221;<span data-line="26;document\Definitions.mdk:42"></span>.
+</p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">stable value</dt>
 <dd class="dd" data-line="26;document\Definitions.mdk:44" style="margin-left:1.5em">
 <p data-line="26;document\Definitions.mdk:44"><span data-line="26;document\Definitions.mdk:44"></span>value which, once established, never changes over time
