Address Michael's feedback

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -706,7 +706,7 @@ To form an overall picture of program quality, developers must often aggregate t
 produced by all of these tools.
 This aggregation is more difficult if each tool produces output in a different format. 
 </p>
-<p class="indent para-continue" data-line="20;document\Introduction.mdk:11"><span data-line="20;document\Introduction.mdk:11"></span>This document defines a standard output format for the output of static analysis tools.
+<p class="indent para-continue" data-line="20;document\Introduction.mdk:11"><span data-line="20;document\Introduction.mdk:11"></span>This document defines a standard format for the output of static analysis tools.
 The goals of the format are:
 </p>
 <ul class="ul list-star loose" data-line="20;document\Introduction.mdk:14">
