Fix malformed file:// URIs
Changed "file://C:/xxx" to "file:///C:/xxx"

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1214,7 +1214,7 @@ and no files matched the wildcard.</p></div>
 </p>
 <pre class="para-block pre-fenced pre-fenced3" data-line="32;document\CoreFormat.mdk:314" data-line-code="32;document\CoreFormat.mdk:315"><code data-line="32;document\CoreFormat.mdk:315">[
     {
-        &quot;uri&quot;: &quot;file://C:/Code/a.cc&quot;,
+        &quot;uri&quot;: &quot;file:///C:/Code/a.cc&quot;,
         &quot;hashes&quot;: [
             {
                 &quot;value&quot;: &quot;b13ce2678a8807ba0765ab94a0ecd394f869bc81&quot;,
@@ -1224,7 +1224,7 @@ and no files matched the wildcard.</p></div>
     },
 
     {
-        &quot;uri&quot;: &quot;file://C:/Code/b.cc&quot;,
+        &quot;uri&quot;: &quot;file:///C:/Code/b.cc&quot;,
         &quot;hashes&quot;: [
             {
                 &quot;value&quot;: &quot;ffc654abaa74903dae1d2ff532078ec0a9d5f674&quot;,
@@ -1566,7 +1566,7 @@ the location where the outer variable was declared.
             {
                 &quot;analysisTarget&quot;: [
                     {
-                        &quot;uri&quot;: &quot;file://C:/Code/a.js&quot;,
+                        &quot;uri&quot;: &quot;file:///C:/Code/a.js&quot;,
                         &quot;mimeType&quot;: &quot;text/javascript&quot;,
                         &quot;region&quot;: {
                             &quot;startLine&quot;: &quot;6&quot;,
@@ -1583,7 +1583,7 @@ the location where the outer variable was declared.
                 &quot;physicalLocations&quot;: [
                     [
                         {
-                            &quot;uri&quot;: &quot;file://C:/Code/a.js&quot;,
+                            &quot;uri&quot;: &quot;file:///C:/Code/a.js&quot;,
                             &quot;mimeType&quot;: &quot;text/javascript&quot;,
                             &quot;region&quot;: {
                                 &quot;startLine&quot;: &quot;2&quot;,
